[metadata]
name = scg-expression-evaluator
version = 0.0.1
author = Xet
author_email = ethan.jones@my.jcu.edu.au
description = Expression Parser and Evaluator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Xett/expression_evaluator
project_urls =
    Bug Tracker = https://github.com/Xett/expression_evaluator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src